Fix overflowing presets bar

--- a/src/renderer/styles/List.scss
+++ b/src/renderer/styles/List.scss
@@ -35,6 +35,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     margin-block-end: 0px;
 
     // Apply custom styles
+    height: 100%;
     overflow-y: auto;
 
     li {
